[gd_scene load_steps=30 format=2]

[ext_resource path="res://data/script/player.gd" type="Script" id=1]
[ext_resource path="res://graphic/system/forward_window.png" type="Texture" id=2]
[ext_resource path="res://graphic/system/backward_window.png" type="Texture" id=3]
[ext_resource path="res://graphic/system/cursor_window.png" type="Texture" id=4]
[ext_resource path="res://graphic/system/frame_window.png" type="Texture" id=5]
[ext_resource path="res://data/script/interface_layer.gd" type="Script" id=6]
[ext_resource path="res://music/audio_node.tscn" type="PackedScene" id=7]
[ext_resource path="res://data/font_display.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://graphic/iconset.png" type="Texture" id=9]

[sub_resource type="GDScript" id=5]
script/source = "extends Camera
var camera = {
	\"mouse_axis\": Vector2(),
	\"mouse_sensitivity\": 3.5,
	\"rot\": Vector3(),
	\"y_limit\": 90.0
	}

#ready
func _ready() -> void:
	camera.mouse_sensitivity = camera.mouse_sensitivity / 1000
	camera.y_limit = deg2rad(camera.y_limit)

#camera
func _input(event: InputEvent) -> void:
	if event is InputEventMouseMotion and Input.get_mouse_mode() == Input.MOUSE_MODE_CAPTURED:
		camera.mouse_axis = event.relative
		camera.rot.y -= camera.mouse_axis.x * camera.mouse_sensitivity
		camera.rot.x = clamp(camera.rot.x - camera.mouse_axis.y * camera.mouse_sensitivity, -camera.y_limit, camera.y_limit)
		get_owner().rotation.y = camera.rot.y
		rotation.x = camera.rot.x


remote func _set_pos(position):
	global_transform = position
"

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 3, 0 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "walking"
length = 0.6
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.15, 0.3, 0.45, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0.15, 2.85, 0 ), Vector3( 0, 3, 0 ), Vector3( -0.15, 2.85, 0 ), Vector3( 0, 3, 0 ) ]
}

[sub_resource type="StyleBoxTexture" id=9]
texture = ExtResource( 5 )
region_rect = Rect2( 0, 0, 19, 19 )
margin_left = 9.0
margin_right = 9.0
margin_top = 8.0
margin_bottom = 9.0

[sub_resource type="StyleBoxTexture" id=8]
texture = ExtResource( 3 )
region_rect = Rect2( 0, 0, 64, 64 )
expand_margin_left = 6.0
expand_margin_right = 6.0
expand_margin_top = 6.0
expand_margin_bottom = 6.0

[sub_resource type="StyleBoxTexture" id=14]
texture = ExtResource( 2 )
region_rect = Rect2( 0, 0, 64, 64 )
expand_margin_left = 6.0
expand_margin_right = 6.0
expand_margin_top = 6.0
expand_margin_bottom = 6.0

[sub_resource type="StyleBoxEmpty" id=22]

[sub_resource type="StyleBoxEmpty" id=26]

[sub_resource type="StyleBoxTexture" id=17]
texture = ExtResource( 4 )
region_rect = Rect2( 0, 0, 10, 10 )
margin_left = 8.0
margin_right = 8.0
margin_top = 8.0
margin_bottom = 8.0
expand_margin_left = 3.0
expand_margin_right = 3.0

[sub_resource type="DynamicFont" id=20]
size = 19
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 8 )

[sub_resource type="Theme" id=13]
default_font = SubResource( 20 )
ItemList/styles/bg = SubResource( 22 )
ItemList/styles/bg_focus = SubResource( 26 )
ItemList/styles/selected_focus = SubResource( 17 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 9 )
region = Rect2( 32, 0, 32, 24 )

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("background:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("menu_layer:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 138, 494 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("audio/bgm/pause_music:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("audio/bgm/pause_music:volume_db")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -80.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("inventory_layer/description_layer:rect_position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 108, 494 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("inventory_layer/item_layer:rect_position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 138, 494 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("inventory_layer/info_layer:rect_position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 363, 494 ) ]
}

[sub_resource type="Animation" id=25]
resource_name = "inventory_close"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("menu_layer:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1, 0.4 ),
"transitions": PoolRealArray( 0.4, 1 ),
"update": 0,
"values": [ Vector2( 138, 494 ), Vector2( 138, 414 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("inventory_layer/description_layer:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 0.4, 1 ),
"update": 0,
"values": [ Vector2( 108, 393 ), Vector2( 108, 494 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("inventory_layer/item_layer:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 0.4, 1 ),
"update": 0,
"values": [ Vector2( 138, 270 ), Vector2( 138, 494 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("inventory_layer/info_layer:rect_position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 0.4, 1 ),
"update": 0,
"values": [ Vector2( 363, 270 ), Vector2( 363, 494 ) ]
}

[sub_resource type="Animation" id=23]
resource_name = "inventory_open"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("menu_layer:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 0.4, 1 ),
"update": 0,
"values": [ Vector2( 138, 414 ), Vector2( 138, 494 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("inventory_layer/description_layer:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.1, 0.4 ),
"transitions": PoolRealArray( 0.4, 1 ),
"update": 0,
"values": [ Vector2( 108, 494 ), Vector2( 108, 393 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("inventory_layer/item_layer:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.1, 0.4 ),
"transitions": PoolRealArray( 0.4, 1 ),
"update": 0,
"values": [ Vector2( 138, 494 ), Vector2( 138, 270 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("inventory_layer/info_layer:rect_position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.1, 0.4 ),
"transitions": PoolRealArray( 0.4, 1 ),
"update": 0,
"values": [ Vector2( 363, 494 ), Vector2( 363, 270 ) ]
}

[sub_resource type="Animation" id=21]
resource_name = "menu_close"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("background:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 0.4, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0.392157 ), Color( 0, 0, 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("menu_layer:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 0.4, 1 ),
"update": 0,
"values": [ Vector2( 138, 414 ), Vector2( 138, 494 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("audio/bgm/pause_music:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.2 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("audio/bgm/pause_music:volume_db")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -10.0, -80.0 ]
}

[sub_resource type="Animation" id=6]
resource_name = "menu_open"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("background:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 0.4, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 0.470588 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("menu_layer:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 0.4, 1 ),
"update": 0,
"values": [ Vector2( 138, 494 ), Vector2( 138, 414 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("audio/bgm/pause_music:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.001 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("audio/bgm/pause_music:volume_db")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -80.0, -10.0 ]
}

[sub_resource type="Animation" id=15]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("../menu_layer/button/inventory:custom_styles/focus:modulate_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=16]
resource_name = "state"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("../menu_layer/button/inventory:custom_styles/focus:modulate_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.54902 ) ]
}

[sub_resource type="CapsuleShape" id=1]
height = 2.0

[node name="player" type="KinematicBody"]
pause_mode = 1
script = ExtResource( 1 )

[node name="camera_node" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3, 0 )
current = true
script = SubResource( 5 )

[node name="anim_player" type="AnimationPlayer" parent="camera_node"]
anims/RESET = SubResource( 3 )
anims/walking = SubResource( 2 )

[node name="flashlight" type="StaticBody" parent="camera_node"]

[node name="light" type="SpotLight" parent="camera_node/flashlight"]
shadow_enabled = true
shadow_color = Color( 0.588235, 0.588235, 0.588235, 1 )
spot_range = 20.0
spot_angle = 35.0
spot_angle_attenuation = 0.5

[node name="interface_layer" type="CanvasLayer" parent="."]
pause_mode = 2
script = ExtResource( 6 )

[node name="background" type="ColorRect" parent="interface_layer"]
margin_right = 720.0
margin_bottom = 480.0
color = Color( 0, 0, 0, 0 )
__meta__ = {
"_edit_lock_": true
}

[node name="menu_layer" type="Control" parent="interface_layer"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -222.0
margin_top = 14.0
margin_right = 204.0
margin_bottom = 64.0
__meta__ = {
"_edit_group_": true
}

[node name="background" type="PanelContainer" parent="interface_layer/menu_layer"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 9 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="background" type="PanelContainer" parent="interface_layer/menu_layer/background"]
modulate = Color( 0.313726, 0.392157, 1, 0.588235 )
show_behind_parent = true
margin_left = 9.0
margin_top = 8.0
margin_right = 417.0
margin_bottom = 41.0
custom_styles/panel = SubResource( 8 )
__meta__ = {
"_edit_lock_": true
}

[node name="forward" type="PanelContainer" parent="interface_layer/menu_layer/background"]
modulate = Color( 0.313726, 0.392157, 1, 0.588235 )
show_behind_parent = true
margin_left = 9.0
margin_top = 8.0
margin_right = 417.0
margin_bottom = 41.0
custom_styles/panel = SubResource( 14 )
__meta__ = {
"_edit_lock_": true
}

[node name="button" type="HBoxContainer" parent="interface_layer/menu_layer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 10.0
margin_bottom = -10.0
custom_constants/separation = 9
alignment = 1

[node name="inventory" type="Button" parent="interface_layer/menu_layer/button"]
margin_left = 10.0
margin_right = 112.0
margin_bottom = 31.0
theme = SubResource( 13 )
custom_styles/focus = SubResource( 17 )
text = "Инвентарь"
flat = true
__meta__ = {
"_edit_lock_": true
}

[node name="achivement" type="Button" parent="interface_layer/menu_layer/button"]
margin_left = 121.0
margin_right = 233.0
margin_bottom = 31.0
theme = SubResource( 13 )
custom_styles/focus = SubResource( 17 )
disabled = true
text = "Достижения"
flat = true
__meta__ = {
"_edit_lock_": true
}

[node name="setting" type="Button" parent="interface_layer/menu_layer/button"]
margin_left = 242.0
margin_right = 344.0
margin_bottom = 31.0
theme = SubResource( 13 )
custom_styles/focus = SubResource( 17 )
disabled = true
text = "Настройки"
flat = true
__meta__ = {
"_edit_lock_": true
}

[node name="exit" type="Button" parent="interface_layer/menu_layer/button"]
margin_left = 353.0
margin_right = 415.0
margin_bottom = 31.0
theme = SubResource( 13 )
custom_styles/focus = SubResource( 17 )
text = "Выйти"
flat = true
__meta__ = {
"_edit_lock_": true
}

[node name="inventory_layer" type="Control" parent="interface_layer"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = SubResource( 13 )
__meta__ = {
"_edit_group_": true
}

[node name="item_layer" type="Control" parent="interface_layer/inventory_layer"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -222.0
margin_top = 14.0
margin_right = -2.0
margin_bottom = 129.0
theme = SubResource( 13 )
__meta__ = {
"_edit_group_": true
}

[node name="background" type="PanelContainer" parent="interface_layer/inventory_layer/item_layer"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 9 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="background" type="PanelContainer" parent="interface_layer/inventory_layer/item_layer/background"]
modulate = Color( 0.313726, 0.392157, 1, 0.588235 )
show_behind_parent = true
margin_left = 9.0
margin_top = 8.0
margin_right = 211.0
margin_bottom = 106.0
custom_styles/panel = SubResource( 8 )
__meta__ = {
"_edit_lock_": true
}

[node name="forward" type="PanelContainer" parent="interface_layer/inventory_layer/item_layer/background"]
modulate = Color( 0.313726, 0.392157, 1, 0.588235 )
show_behind_parent = true
margin_left = 9.0
margin_top = 8.0
margin_right = 211.0
margin_bottom = 106.0
custom_styles/panel = SubResource( 14 )
__meta__ = {
"_edit_lock_": true
}

[node name="item_list" type="ItemList" parent="interface_layer/inventory_layer/item_layer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -9.0
margin_bottom = -7.99963
theme = SubResource( 13 )
custom_constants/vseparation = 1
custom_constants/hseparation = -11
items = [ "Фонарик", SubResource( 24 ), false, "Зажигалка", SubResource( 24 ), false ]

[node name="info_layer" type="Control" parent="interface_layer/inventory_layer"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = 3.0
margin_top = 14.0
margin_right = 205.0
margin_bottom = 129.0
theme = SubResource( 13 )
__meta__ = {
"_edit_group_": true
}

[node name="background" type="PanelContainer" parent="interface_layer/inventory_layer/info_layer"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 9 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="background" type="PanelContainer" parent="interface_layer/inventory_layer/info_layer/background"]
modulate = Color( 0.313726, 0.392157, 1, 0.588235 )
show_behind_parent = true
margin_left = 9.0
margin_top = 8.0
margin_right = 193.0
margin_bottom = 106.0
custom_styles/panel = SubResource( 8 )
__meta__ = {
"_edit_lock_": true
}

[node name="forward" type="PanelContainer" parent="interface_layer/inventory_layer/info_layer/background"]
modulate = Color( 0.313726, 0.392157, 1, 0.588235 )
show_behind_parent = true
margin_left = 9.0
margin_top = 8.0
margin_right = 193.0
margin_bottom = 106.0
custom_styles/panel = SubResource( 14 )
__meta__ = {
"_edit_lock_": true
}

[node name="label" type="Label" parent="interface_layer/inventory_layer/info_layer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 15.0
margin_top = 10.0
margin_right = -12.0
margin_bottom = -10.0
custom_constants/line_spacing = 0
text = "Заряд: 72%
Редкость: Обычный
Экипировано"
autowrap = true

[node name="description_layer" type="Control" parent="interface_layer/inventory_layer"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -252.0
margin_top = 14.0
margin_right = 234.0
margin_bottom = 84.9998
theme = SubResource( 13 )
__meta__ = {
"_edit_group_": true
}

[node name="background" type="PanelContainer" parent="interface_layer/inventory_layer/description_layer"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 9 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="background" type="PanelContainer" parent="interface_layer/inventory_layer/description_layer/background"]
modulate = Color( 0.313726, 0.392157, 1, 0.588235 )
show_behind_parent = true
margin_left = 9.0
margin_top = 8.0
margin_right = 477.0
margin_bottom = 61.9998
custom_styles/panel = SubResource( 8 )
__meta__ = {
"_edit_lock_": true
}

[node name="forward" type="PanelContainer" parent="interface_layer/inventory_layer/description_layer/background"]
modulate = Color( 0.313726, 0.392157, 1, 0.588235 )
show_behind_parent = true
margin_left = 9.0
margin_top = 8.0
margin_right = 477.0
margin_bottom = 61.9998
custom_styles/panel = SubResource( 14 )
__meta__ = {
"_edit_lock_": true
}

[node name="label" type="Label" parent="interface_layer/inventory_layer/description_layer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 15.0
margin_top = 10.0
margin_right = -12.0
margin_bottom = -8.0
custom_constants/line_spacing = 0
text = "Небольшой, слегка подсевший фонарик, найден в шкафчике, перезаряжается батарейками"
autowrap = true

[node name="anim_player" type="AnimationPlayer" parent="interface_layer"]
anims/RESET = SubResource( 4 )
anims/inventory_close = SubResource( 25 )
anims/inventory_open = SubResource( 23 )
anims/menu_close = SubResource( 21 )
anims/menu_open = SubResource( 6 )

[node name="anim_state" type="AnimationPlayer" parent="interface_layer/anim_player"]
autoplay = "state"
anims/RESET = SubResource( 15 )
anims/state = SubResource( 16 )

[node name="audio" parent="interface_layer" instance=ExtResource( 7 )]

[node name="pause_music" parent="interface_layer/audio/bgm" index="2"]
volume_db = -80.0

[node name="collision_shape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 2, 0 )
shape = SubResource( 1 )

[node name="audio" parent="." instance=ExtResource( 7 )]

[connection signal="focus_entered" from="interface_layer/menu_layer/button/inventory" to="interface_layer" method="focus_entered"]
[connection signal="pressed" from="interface_layer/menu_layer/button/inventory" to="interface_layer" method="button_pressed"]
[connection signal="focus_entered" from="interface_layer/menu_layer/button/achivement" to="interface_layer" method="focus_entered"]
[connection signal="pressed" from="interface_layer/menu_layer/button/achivement" to="interface_layer" method="button_pressed"]
[connection signal="focus_entered" from="interface_layer/menu_layer/button/setting" to="interface_layer" method="focus_entered"]
[connection signal="pressed" from="interface_layer/menu_layer/button/setting" to="interface_layer" method="button_pressed"]
[connection signal="focus_entered" from="interface_layer/menu_layer/button/exit" to="interface_layer" method="focus_entered"]
[connection signal="pressed" from="interface_layer/menu_layer/button/exit" to="interface_layer" method="button_pressed"]

[editable path="interface_layer/audio"]
